[gd_scene load_steps=2 format=3 uid="uid://ydl2xfbaj3am"]

[ext_resource type="Script" path="res://ratespiel.gd" id="1_2wsp1"]

[node name="Ratespiel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2wsp1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Titel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Ich bin ein Label"
horizontal_alignment = 1

[node name="SpinBox" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
max_value = 200.0

[node name="CheckButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "CheckButton"

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Infolabel"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Nochmal spielen"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Klick mich!"

[connection signal="pressed" from="VBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
